test/corpus/test.txt
=====|||
Загальний тест
=====|||
#Some Story Name - 1)
#https://some-site.link/bla-bla

#Перекладав: Хтось, Shos1

=== 0 ===
== 00 == (99)
Текст
---
Звуки *0
= коментар до попереднього рядка

-----|||

(source_file
  (works
    (name (work_marker))
    (link (work_marker))
  )
  (credits
    (role (role_marker) (persons
        (nickname)
        (nickname)
      )
    )
  )
  (part (part_number)
    (page (page_number (page_real_number) )
      (text)
      (separator)
      (sound)
      (comment)
    )
  )
)

=====|||
Коментарі всюди
=====|||
= komentar 1
#Some Story Name - 1)
= komentar 2
#https://some-site.link/bla-bla
= komentar 3

#Перекладав: Хтось, Shos1
= komentar 4
#Редачив: Poh
= komentar 5

= сепар

=== 0 ===
= komentar 6
== 00 == (99)
= komentar
Текст
= komentar
---
= komentar
Звуки *0
= komentar
= коментар до попереднього рядка

== 1 ==
= komentar

-----|||

(source_file
  (comment)
  (works
    (name (work_marker))
    (comment)
    (link (work_marker))
    (comment)
  )
  (credits
    (role (role_marker) (persons
        (nickname)
        (nickname)
      )
    )
    (comment)
    (role (role_marker) (persons
        (nickname)
      )
    )
    (comment)
  )
  (comment)
  (part (part_number)
    (comment)
    (page (page_number (page_real_number) )
      (comment)
      (text)
      (comment)
      (separator)
      (comment)
      (sound)
      (comment)
      (comment)
    )
    (page (page_number)
      (comment)
    )
  )
)

=====|||
Необхідний мінімум
=====|||
=== 0 ===
== 0 ==
Т

-----|||

(source_file
  (part (part_number)
    (page (page_number)
      (text)
    )
  )
)

=====|||
Допустимі повтори
=====|||





#Some Story Name - 1)
#https://some-site.link/bla-bla1
#Some Story Name - 2)
=
=
=
=
#https://some-site.link/bla-bla2
#Some Story Name - 3)
#https://some-site.link/bla-bla3


#Перекладав: Хтось, Shos1
#Перекладав: Хтось



=




=== 0 ===
== 00 == (99)
Текст
---
Звуки *0
= коментар до попереднього рядка

== 1 ==
Текст
---
Звуки *0
= коментар до попереднього рядка
Текст text
---
Звуки *9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
= коментар

=== 1234567890 ===
== 1234567890 == (1234567890)
Текст
Текст
---
---
Звуки *0
Звуки *0
= коментар до попереднього рядка
= коментар до попереднього рядка

== 1 ==
Текст
---
Звуки *0
= коментар до попереднього рядка

== 02 ==
Текст
---
Звуки *0
= коментар до попереднього рядка

-----|||

(source_file
  (works
    (name (work_marker))
    (link (work_marker))

    (name (work_marker))
    (comment)
    (comment)
    (comment)
    (comment)
    (link (work_marker))

    (name (work_marker))
    (link (work_marker))
  )
  (credits
    (role (role_marker) (persons
        (nickname)
        (nickname)
      )
    )
    (role (role_marker) (persons
        (nickname)
      )
    )
  )
  (comment)
  (part (part_number)
    (page (page_number (page_real_number) )
      (text)
      (separator)
      (sound)
      (comment)
    )
    (page (page_number)
      (text)
      (separator)
      (sound)
      (comment)
      (text)
      (separator)
      (sound)
      (comment)
    )
  )
  (part (part_number)
    (page (page_number (page_real_number) )
      (text)
      (text)
      (separator)
      (separator)
      (sound)
      (sound)
      (comment)
      (comment)
    )
    (page (page_number)
      (text)
      (separator)
      (sound)
      (comment)
    )
    (page (page_number)
      (text)
      (separator)
      (sound)
      (comment)
    )
  )
)

=====|||
Текст може закінчуватися числом
=====|||
=== 0 ===
== 0 ==
Т * normal 0

-----|||

(source_file
  (part (part_number)
    (page (page_number)
      (text)
    )
  )
)

